--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "url": "git+https://github.com/FDA/open.fda.gov.git"
   },
   "dependencies": {
-    "babel-eslint": "^8.0.1",
-    "babel-polyfill": "^6.26.0",
-    "bluebird": "^3.5.1",
+    "babel-eslint": "8.0.1",
+    "babel-polyfill": "6.26.0",
+    "bluebird": "3.5.1",
     "chart.js": "1.1.1",
-    "classnames": "^2.2.5",
-    "copy-webpack-plugin": "^4.2.0",
-    "create-react-class": "^15.6.3",
-    "dateformat": "^3.0.2",
-    "eslint": "^4.9.0",
-    "eslint-config-react-tools": "^1.1.2",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.4.0",
+    "classnames": "2.2.5",
+    "copy-webpack-plugin": "4.2.0",
+    "create-react-class": "15.6.3",
+    "dateformat": "3.0.2",
+    "eslint": "4.9.0",
+    "eslint-config-react-tools": "1.1.2",
+    "eslint-plugin-babel": "4.1.2",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
     "file-saver": "1.3.3",
     "flow": "^0.2.3",
     "gatsby": "^1.9.277",
