--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -79,7 +79,7 @@
         - title: Download the dataset
           link: /apis/drug/label/download/
         - title: Searchable fields
-          link: /apis/drug/label/searchable-fields
+          link: /apis/drug/label/searchable-fields/
     - title: Adverse Events
       id: drug-adverse-events
       collapse: true
@@ -97,7 +97,7 @@
         - title: Download the dataset
           link: /apis/drug/event/download/
         - title: Searchable fields
-          link: /apis/drug/event/searchable-fields
+          link: /apis/drug/event/searchable-fields/
 
 - title: Device API Endpoints
   id: device-api-endpoints
@@ -105,7 +105,7 @@
   collapse: true
   items:
     - title: 510(k)
-      id: device-510(k)
+      id: device-510k
       collapse: true
       items:
         - title: Overview
